--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/appicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/appicon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DASHBOARD">
+        <activity
+            android:name=".profile_view"
+            android:exported="false" />
+        <activity
+            android:name=".SPLASH_SCREEN"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".bmiactivity"
             android:exported="false" />
@@ -17,12 +29,6 @@
             android:exported="false" />
         <activity
             android:name=".fastingsugar"
-            android:exported="false" />
-        <activity
-            android:name=".RANDOMSUGARTABLE"
-            android:exported="false" />
-        <activity
-            android:name=".randomsugar"
             android:exported="false" />
         <activity
             android:name=".general_sugar"
@@ -65,13 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
